examples/vm-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vm-controller
spec:
  selector:
    matchLabels:
      app: vm-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: vm-controller
    spec:
      serviceAccountName: vmctl
      containers:
      - name: vm-controller
        image: gcr.io/mixia-cube/vm-controller:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
