examples/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hostname
        backend:
          serviceName: hostname-mig-xinyu-mig2
          servicePort: 9376
      - path: /vm
        backend:
          serviceName: vm-svc
          servicePort: 80
